--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,10 @@ jobs:
       # specify the version you desire here
       - image: circleci/node:7.10
     steps:
-    #   - checkout
-    #   - restore_cache:
-    #       key: dependency-cache-{{ checksum "package.json" }}
-    #       key: v1-dependencies-
+      - checkout
+      - restore_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
+          key: v1-dependencies-
 
       - run:
           name: Install dependencies
