--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,10 @@
 version: 2
 jobs:
   build:
-    branches:
-        only: master
+      - build:
+          filters:
+            branches:
+              only: master
     docker:
       - image: circleci/node:7.10
     steps:
@@ -24,11 +26,11 @@ jobs:
           name: build
           command: npm run build
 
-    #   - run:
-    #       name: Install awscli
-    #       command: |
-    #           sudo apt-get install python-pip python-dev
-    #           sudo pip install awscli
-    #   - run:
-    #       name: deploy to production
-    #       command: aws s3 sync public s3://redux-gallery --delete --cache-control "max-age=100000"
+      - run:
+          name: Install awscli
+          command: |
+              sudo apt-get install python-pip python-dev
+              sudo pip install awscli
+      - run:
+          name: deploy to production
+          command: aws s3 sync public s3://redux-gallery --delete --cache-control "max-age=100000"
